; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dcn10/extr_dcn10_optc.c_optc1_setup_vertical_interrupt0.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dcn10/extr_dcn10_optc.c_optc1_setup_vertical_interrupt0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timing_generator = type { i32 }
%struct.optc = type { i32 }

@OTG_VERTICAL_INTERRUPT0_POSITION = common dso_local global i32 0, align 4
@OTG_VERTICAL_INTERRUPT0_LINE_START = common dso_local global i32 0, align 4
@OTG_VERTICAL_INTERRUPT0_LINE_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @optc1_setup_vertical_interrupt0(%struct.timing_generator* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.timing_generator*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.optc*, align 8
  store %struct.timing_generator* %0, %struct.timing_generator** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.timing_generator*, %struct.timing_generator** %4, align 8
  %9 = call %struct.optc* @DCN10TG_FROM_TG(%struct.timing_generator* %8)
  store %struct.optc* %9, %struct.optc** %7, align 8
  %10 = load i32, i32* @OTG_VERTICAL_INTERRUPT0_POSITION, align 4
  %11 = load i32, i32* @OTG_VERTICAL_INTERRUPT0_LINE_START, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @OTG_VERTICAL_INTERRUPT0_LINE_END, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @REG_SET_2(i32 %10, i32 0, i32 %11, i32 %12, i32 %13, i32 %14)
  ret void
}

declare dso_local %struct.optc* @DCN10TG_FROM_TG(%struct.timing_generator*) #1

declare dso_local i32 @REG_SET_2(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
